<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Padel Score</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="initial_score" translatable="false">0</string>
    <string name="point_button">Point</string>
    <string name="new_game_button">New Game</string>
    <string name="new_set_button">New Set</string>
    <string name="new_match_button">New Match</string>
    <string name="games">Games</string>
    <string name="sets">Sets</string>
    <string name="game_winner">Game winner</string>
    <string name="set_winner">Set winner</string>
    <string name="match_winner">MATCH WINNER</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="deuce">Deuce</string>
    <string name="advantage_a">Advantage A</string>
    <string name="advantage_b">Advantage B</string>
    <string name="press_button_message">Press %1$s button to start a new %2$s.</string>
    <string name="game">game</string>
    <string name="set">set</string>
    <string name="match">match!!!</string>
    <string name="winner_message">Team %1$s wins %2$s</string>
</resources>
